--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,7 +8,8 @@ vpl = "6JuaxB1fEN9n6ApcvRxy6avr25H8qTzGRGpT43qrCvm4"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+# cluster = "Localnet"
+cluster = "devnet"
 wallet = "/Users/anish/.config/solana/id.json"
 
 [scripts]
