--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,12 +3,15 @@ seeds = false
 skip-lint = false
 [programs.localnet]
 vpl = "6JuaxB1fEN9n6ApcvRxy6avr25H8qTzGRGpT43qrCvm4"
+[programs.devnet]
+vpl = "6JuaxB1fEN9n6ApcvRxy6avr25H8qTzGRGpT43qrCvm4"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+# cluster = "Localnet"
+cluster = "devnet"
 wallet = "/Users/anish/.config/solana/id.json"
 
 [scripts]
